// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShowOn /> if \`props.computer\` is \`true\` should render the right structure 1`] = `
<ShowOn
  computer={true}
  mobile={false}
  parent="div"
  parentProps={Object {}}
  tablet={false}
  widescreen={false}
>
  <div
    className="show-on-computer"
  />
</ShowOn>
`;

exports[`<ShowOn /> if \`props.mobile\` is \`true\` should render the right structure 1`] = `
<ShowOn
  computer={false}
  mobile={true}
  parent="div"
  parentProps={Object {}}
  tablet={false}
  widescreen={false}
>
  <div
    className="show-on-mobile"
  />
</ShowOn>
`;

exports[`<ShowOn /> if \`props.tablet\` is \`true\` should render the right structure 1`] = `
<ShowOn
  computer={false}
  mobile={false}
  parent="div"
  parentProps={Object {}}
  tablet={true}
  widescreen={false}
>
  <div
    className="show-on-tablet"
  />
</ShowOn>
`;

exports[`<ShowOn /> if \`props.widescreen\` is \`true\` should render the right structure 1`] = `
<ShowOn
  computer={false}
  mobile={false}
  parent="div"
  parentProps={Object {}}
  tablet={false}
  widescreen={true}
>
  <div
    className="show-on-widescreen"
  />
</ShowOn>
`;

exports[`<ShowOn /> should render the right structure 1`] = `
<ShowOn
  computer={false}
  mobile={false}
  parent="div"
  parentProps={Object {}}
  tablet={false}
  widescreen={false}
>
  <div
    className=""
  />
</ShowOn>
`;
